--- a/CSS/style.css
+++ b/CSS/style.css
@@ -257,12 +257,14 @@ header{
 
 
 .content2{
-  display: flex;
+  display: grid;
   position: absolute;
   width: 1478px;
   height: 3040px;
   top: 1440px;
   left: 229px;
+  justify-content: space-between;
+  margin: 0;
 }
 
 .c_01{
@@ -270,16 +272,21 @@ header{
   position: relative;
   width: 1462px;
   height: 720px;
-  
 }
 
 .eg_01{
   display: flex;
   position: absolute;
-  width: 247px;
+  width: 302px;
   height: 240px;
   top: 38px;
-  opacity: 0.1px;
+  opacity: 10%;
+  font-family: Poppins;
+  font-size: 240px;
+  font-weight: 700;
+  line-height: 240px;
+  text-align: left;
+  color:white;
 }
 
 .picture_01{
@@ -288,4 +295,315 @@ header{
   width: 566px;
   height: 720px;
   left: 896px;
+}
+
+.cont_01{
+  display: grid;
+  position: relative;
+  width:632px;
+  height: 465px;
+  top: 190px;
+  left: 134px;
+  gap: 27px;
+}
+
+.what_level{
+  display: flex;
+  width: 555px;
+  height: 170px;
+  font-family: Playfair Display;
+  font-size: 64px;
+  font-weight: 600;
+  line-height: 85.31px;
+  color:white;
+}
+
+.determ_text{
+  display: flex;
+  width: 632px;
+  height: 160px;
+  color: white;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 32px;
+}
+
+.more_01{
+  display: flex;
+  width: 137px;
+  height: 27px;
+  
+}
+
+.pic_more{
+  display: flex;
+  position: absolute;
+  left: 103px;
+  margin-top: 3px;
+}
+
+.t_more_01{
+  display: flex;
+  width: 97px;
+  height: 27px;
+  top: 438px;
+  color: #FBD784;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 27px;
+}
+
+.picture_02{
+  display: flex;
+  position: absolute;
+  width: 566px;
+  height: 720px;
+}
+
+.eg_02{
+  display: flex;
+  position: absolute;
+  width: 294px;
+  height: 240px;
+  top: 38px;
+  left: 680px;
+  opacity: 10%;
+  font-family: Poppins;
+  font-size: 240px;
+  font-weight: 700;
+  line-height: 240px;
+  color:white;
+  text-align: left;
+}
+
+.cont_02{
+  display: grid;
+  position: relative;
+  width: 632px;
+  height: 519px;
+  top: 200px;
+  left: 830px;
+  gap: 27px;
+}
+
+.picking_the{
+  display: flex;
+  width: 555px;
+  height: 192px;
+  font-family: Poppins;
+  font-size: 64px;
+  font-weight: 600;
+  line-height: 96px;
+  color:white;
+}
+
+.thenice_text{
+  display: flex;
+  width: 632px;
+  height: 192px;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 32px;
+  text-align: left;
+  color:white;
+}
+
+.picture_03{
+  display: flex;
+  position: absolute;
+  width: 566px;
+  height: 720px;
+  left: 896px;
+}
+
+.eg_03{
+  display: flex;
+  position: absolute;
+  width: 302px;
+  height: 240px;
+  top: 38px;
+  opacity: 10%;
+  font-family: Poppins;
+  font-size: 240px;
+  font-weight: 700;
+  line-height: 240px;
+  color:white;
+  text-align: left;
+}
+
+.cont_03{
+  display: grid;
+  position: relative;
+  width: 632px;
+  height: 487px;
+  top: 179px;
+  left: 134px;
+  gap: 27px;  
+  border: 1px solid red;
+}
+
+.tagline_03{
+  display: flex;
+  width: 464px;
+  height: 27px;
+  justify-content: space-between;
+}
+
+.tag_03{
+  display: flex;
+  position: absolute;
+  width: 72px;
+  height: 2px;
+  top: 10px;
+}
+
+.t_03{
+  display: flex;
+  position: absolute;
+  width: 378px;
+  height: 27px;
+  left: 96px;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 27px;
+  letter-spacing: 6px;
+  text-align: left;
+  color: #FBD784;
+}
+
+.understand{
+  display: flex;
+  width: 555px;
+  height: 192px;
+  font-family: Poppins;
+  font-size: 64px;
+  font-weight: 600;
+  line-height: 96px;
+  text-align: left;
+  color:white;
+}
+
+.to_start{
+  display: flex;
+  width: 632px;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 32px;
+  text-align: left;
+  color:white;
+}
+
+.footer{
+  display: flex;
+  position: relative;
+  width: 1478px;
+  height: 280px;
+  justify-content: space-between;
+}
+
+.cop{
+  display: flex;
+  position: absolute;
+  width: 376px;
+  height: 32px;
+  bottom: 0;
+  left: 6.06px;
+  opacity: 50%;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 32px;
+  text-align: left;
+  color:white;
+}
+
+.f_text{
+  display: flex;
+  position: absolute;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 32px;
+  text-align: left;
+  width: 365px;
+  color: white;
+  top: 55px;
+}
+
+.f_logo{
+  width: 106px;
+  height: 43px;
+  top: 2760px;
+}
+
+.f_t_logo{
+  width: 24px;
+  height: 43px;
+  top: 2760px;
+  left: 82px;
+  font-family: Playfair Display;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 42.66px;
+  letter-spacing: 0.01em;
+  text-align: left;
+  color:white;
+}
+
+ul{
+  list-style-type: none;
+  padding: 0;
+}
+
+li{
+  text-decoration: none;
+}
+
+li>a{
+  text-decoration: none;
+}
+
+.link{
+  display: flex;
+  position: absolute;
+  width: 209px;
+  height: 280px;
+  left: 896px;
+}
+
+.link_1{
+  width: 209px;
+  height: 32px;
+  display: flex;
+  font-family: Poppins;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 32px;
+  text-align: left;
+  color: #FBD784;
+}
+
+.link_2{
+  display: flex;
+  margin-top: 15px;
+  height: 32px;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 32px;
+  text-align: left;
+  color:white;
+}
+
+.link2{
+  display: flex;
+  position: absolute;
+  width: 177px;
+  height: 184px;
+  left: 1301px;
 }
