--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,16 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-body{
-  width: 1920px;
-  height: 4600px;
+*{
   margin: 0;
   padding: 0;
+  text-decoration: none;
+}
+
+body{
+  font-style: normal;
 }
 
 .desktop1920{
   display: flex;
-  position: relative;
   flex-wrap: wrap;
   width: 1920px;
   height: 4600px;
@@ -21,116 +23,69 @@ body{
   padding: 0;
 }
 
-.content1{
-  display: flex;
-  position: absolute;
-  
-  background-image: url(/img/BG\ 1.png);
-  height: 1900px;
-  width: 1920px;
-  background-repeat: no-repeat;
-}
-
-
-div>a{
-  text-decoration: 0;
-  color: white;
-}
-
 header{
   display: flex;
-  position: absolute;
-  width: 1760px;
-  height: 37px;
-  top: 64px;
-  left: 91px;
-  z-index: 100;
+  background-image: url(../img/BG\ 1.png);
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  flex-wrap: wrap;
 }
 
 .header{
   display: flex;
-  position: relative;
-  width: 1760px;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 0;
+  justify-content: space-between;
+  margin-top: 64px;
   height: 37px;
 }
 
-.h-logo{
-  display: flex;
-  width: 113px;
-  height: 37px;
-  font-family: Playfair Display;
-  font-size: 32px;
-  font-weight: 700;
-  line-height: 42.66px;
-  letter-spacing: 0.01em;
-}
-
-.h_eg{
-  display: flex;
-  width: 102px;
-  height: 27px;
-  margin-top: 2px;
-  margin-left: 739px;
+.header_btn{
+  text-decoration: 0;
+  color: white;
   font-family: Poppins;
   font-size: 18px;
   font-weight: 700;
   line-height: 27px;
+  text-align: left;
+
+}
+
+.nav_menu{
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
+  flex-wrap: wrap;
+  align-content: center;
   
 }
 
-.h_about{
+.logo{
   display: flex;
-  width: 100px;
-  height: 27px;
-  margin-top: 2px;
-  margin-left: 20px;
-  font-family: Poppins;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 27px;  
+  width: 113px;
+  height: 37px;
 }
 
-.h_blog{
-  display: flex;
-  width: 50px;
-  height: 27px;
-  margin-top: 2px;
-  margin-left: 10px;
-  font-family: Poppins;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 27px; 
-}
-
-.h_account{
-  display: flex;
-  height: 26px;
-  width: 105px;
-  margin-left: auto;
-  margin-top: 3px;
-  font-family: Poppins;
-  font-size: 17px;
-  font-weight: 700;
-  line-height: 25.5px;
-}
 .acc{
-  margin-left: 3px;
-  margin-top: 1px;
-}
-
-.cart{
-  width: 24px;
-  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100px;
+  font-size: 17px;
 }
 
 .content{
-  display: grid;
-  position: relative;
+  display: flex;
+  flex-wrap: wrap;
   width: 950px;
   height: 419px;
   margin-left: 500px;
   gap: 32px;
-  margin-top: 287px;
+
+  top: 287px;
 }
 
 .rectangle{
@@ -180,12 +135,13 @@ header{
 }
 
 .social{
-  display: grid;
-  position: relative;
+  display: flex;
+  flex-wrap: wrap;
   width: 27px;
   height: 173px;
   top: 359px;
   left: 77px;
+  position: absolute;
 }
 
 .s_text{
@@ -216,7 +172,7 @@ header{
 
 .slider{
   display: flex;
-  position: relative;
+  position: absolute;
   width: 77px;
   height: 244px;
   top: 326px;
@@ -532,7 +488,7 @@ header{
   text-align: left;
   width: 365px;
   color: white;
-  top: 55px;
+  top: 62px;
 }
 
 .f_logo{
@@ -583,19 +539,20 @@ li>a{
   font-family: Poppins;
   font-size: 24px;
   font-weight: 700;
-  line-height: 32px;
+  line-height: 36px;
   text-align: left;
   color: #FBD784;
+  margin-bottom: 24px;
 }
 
 .link_2{
   display: flex;
-  margin-top: 15px;
+  margin-top: 16px;
   height: 32px;
   font-family: Poppins;
   font-size: 18px;
   font-weight: 600;
-  line-height: 32px;
+  line-height: 36px;
   text-align: left;
   color:white;
 }
